--- a/index.html
+++ b/index.html
@@ -171,16 +171,16 @@
                 <h3 class="scroll-animation rotate-text1">projects developed with me</h3>
                 <div class="images">
                     <div class="block1 clip_left scroll-animation floating">
-                        <img src="Game1.png" style="top: -70px; left: -105px; width: 190%;">
+                        <img src="Game1.jpg" style="top: -70px; left: -105px; width: 190%;">
                     </div>
                     <div class="block2 clip_right scroll-animation floating">
-                        <img src="Game2.png" style="top: -70px; left: -150px; width: 240%;">
+                        <img src="Game2.jpg" style="top: -70px; left: -150px; width: 240%;">
                     </div>
                     <div class="block3 clip_right scroll-animation floating">
-                        <img src="Game3.png" style="top: -10px; left: -50px; width: 240%;">
+                        <img src="Game3.jpg" style="top: -10px; left: -50px; width: 240%;">
                     </div>
                     <div class="block4 clip_left scroll-animation floating">
-                        <img src="Game4.png" style="top: -70px; left: -105px; width: 190%;">
+                        <img src="Game4.jpg" style="top: -70px; left: -105px; width: 190%;">
                     </div>
                 </div>
             </div>
