add "about me" dummy

--- a/index.html
+++ b/index.html
@@ -117,11 +117,24 @@
             transform: rotate(-30deg);
             top: 0;
         }
+
+        .aboutme{
+            width: 900px;
+            margin-left: auto;
+            margin-right: auto;
+            color: #95ff21;
+            text-shadow: 0 0 10px #95ff21;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 20pt; 
+        }
+        .aboutme h1{
+            font-size: 40pt; 
+        }
     </style>
     <body >
         <div id="background">
-            <div style="filter: opacity(0.03); background-size: 600px; position:absolute; background-image: url('Background.png'); width: 100%; height: 100%;"></div>
-            <div style="filter: opacity(0.05); background-size: 1200px; position:absolute; background-image: url('Background.png'); background-position: center; width: 100%; height: 100%;"></div>
+            <div style="filter: opacity(0.04); background-size: 600px; position:absolute; background-image: url('Background.png'); width: 100%; height: 100%;"></div>
+            <div style="filter: opacity(0.054); background-size: 1200px; position:absolute; background-image: url('Background.png'); background-position: center; width: 100%; height: 100%;"></div>
             <div style=" filter: opacity(0.6); background-size: 4000px; position:absolute; background-image: url('BackgroundFog.png'); width: 100%; height: 100%;"></div>
             <div style=" filter: opacity(0.6); background-size: 1000px; position:absolute; background-image: url('BackgroundFog.png'); width: 100%; height: 100%;"></div>
             <div style=" filter: opacity(0.6); background-size: 2000px; position:absolute; background-image: url('BackgroundFog.png'); width: 100%; height: 100%;"></div>
@@ -165,8 +178,7 @@
                 <h1>Game developer<br>
                     Portfolio</h1>   
             </div>
-            <!--Spacing-->
-            <div style="height: 400px;"></div>
+            <!--Spacing--> <div style="height: 400px;"></div>
             <div class="module1">
                 <h3 class="scroll-animation rotate-text1">projects developed with me</h3>
                 <div class="images">
@@ -185,6 +197,14 @@
                 </div>
             </div>
 
+            <!--Spacing--> <div style="height: 250px;"></div>
+            <div class="aboutme">
+                <h1>Title</h1>
+                <p>
+                    text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text 
+                </p>
+            </div>
+            
             <div style="height: 5000px;"></div>
         </div>
 
