--- a/index.html
+++ b/index.html
@@ -42,25 +42,19 @@
 
 
         .module1{
-            width: 900px;
+            width: 1050px;
             margin-left: auto;
             margin-right: auto;
             position: static;
         }
         .module1 .images{
-            height: 800px;
+            height: 650px;
         }
         .module1 h3{
             display: block;
             position: relative;
             text-align: center;
             color: #070a306e;
-            /*text-shadow: 
-                0 0 10px #95ff21,
-                0 0 5px #2e4a69, 
-                0 0 5px #2e4a69, 
-                0 0 5px #2e4a69, 
-                0 0 5px #2e4a69;*/
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-weight: 400;
             font-size: 28pt;
@@ -83,6 +77,7 @@
             width: 25%;
             height: 100%;
             overflow: hidden;
+            box-shadow: #95ff21 0px -13px, #95ff21 0px 13px;
         }
         .module1 .images img{
             position:relative;
@@ -126,22 +121,22 @@
             top: -100px;
         }
         .module1 .images .block1 img{
-            top: -70px; 
+            top: -170px; 
             left: -105px; 
             width: 190%;
         }
         .module1 .images .block2 img{
-            top: -70px; 
+            top: -170px; 
             left: -150px; 
             width: 240%;
         }
         .module1 .images .block3 img{
-            top: -130px; 
+            top: -230px; 
             left: -50px; 
             width: 240%;
         }
         .module1 .images .block4 img{
-            top: -70px; 
+            top: -170px; 
             left: -105px; 
             width: 200%;
         }
