--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
             position: relative;
             z-index: 100;
         }
+        .container{
+            display: flex;
+            flex-direction:row;
+            justify-content: center;
+            align-items: stretch;
+            margin: auto;
+        }
         .header h1{
             line-height: 66pt;
             text-transform: uppercase;
@@ -34,7 +41,8 @@
             font-size: 82pt;
         }
         .header h1 div{
-            display: inline-block;
+            text-align-last:justify;
+            margin: auto;
             font-size: 60pt;
             font-weight: 400;
         }
@@ -53,7 +61,7 @@
 
 
         .module1{
-            width: 1000px;
+            width: 900px;
             margin-left: auto;
             margin-right: auto;
             position: static;
@@ -231,9 +239,10 @@
 
         <div >
             <div class="header">
-                <h1>
-                    Game developer<br>
+                <div class="container">
+                    <h1>Game developer <br>
                     <div>
+                        
                         <span>P</span>
                         <span>o</span>
                         <span>r</span>
@@ -242,9 +251,10 @@
                         <span>o</span>
                         <span>l</span>
                         <span>i</span>
-                        <span>o</span>
-                    </div>
-                </h1>   
+                        <span>o</span>  
+
+                    </div></h1> 
+                </div>
             </div>
             <!--Spacing--> <div style="height: 400px;"></div>
             <div class="module1">
