--- a/index.html
+++ b/index.html
@@ -48,8 +48,17 @@
         }
         .header h1 div span{
             display: inline-block;
-            margin: 0px 19.5px;
         }  
+        .header h1 div span:first-child{
+            text-align-last: left;
+            justify-content:left;
+            text-align: left;
+        }
+        .header h1 div span:last-child{
+            text-align-last: right;
+            justify-content:right;
+            text-align: right;
+        }
 
         .background_decor{
             position: absolute;
