--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/header.css" type="text/css">
     <link rel="stylesheet" href="styles/background.css" type="text/css">
     <link rel="stylesheet" href="styles/spinner.css" type="text/css">
+    <link rel="stylesheet" href="styles/module.css" type="text/css">
     <body>
 
         <div class="load-screen hidden">
@@ -70,29 +71,53 @@
                     </div></h1> 
                 </div>
             </div>
-            <!--Spacing--> <div style="height: 400px;"></div>
+            <div><p>-</p></div>
+<!--Spacing--> <div style="height: 200px;"></div>
+            <div class="aboutme__hello">
+                <table>
+                    <tr>
+                        <td>
+                            <img class="aboutme__hello__myphoto" src="images/MyPhoto.png" alt="">
+                        </td>
+                        <td>
+                            <p> Hi, my name is Mikhail <span class="aboutme__hello__cursor">_</span> </p>
+                        </td>
+                    </tr>
+                </table>
+                </div>
+            </div>
+
+<!--Spacing--> <div style="height: 200px;"></div>
             <div class="module1">
                 
                 <h3 class="scroll-animation rotate-text1">
                     <span>projects dev</span>e<span>loped by me</span>
                 </h3>
 
-                <div class="images">
-                    <div class="block1 clip_left scroll-animation floating" onload="imgLoaded(this)">
-                        <img src="images/Game1.jpg">
-                        <div></div>
+                <div class="module1__images">
+                    <div class="module1__block module1__block1 clip_left scroll-animation floating" onload="imgLoaded(this)">
+                        <div class="cliped">
+                            <img src="images/Game1.jpg">
+                        </div>
+                        <div class="module1__gradient"></div>
                     </div>
-                    <div class="block2 clip_right scroll-animation floating" onload="imgLoaded(this)">
-                        <img src="images/Game2.jpg">
-                        <div></div>
+                    <div class="module1__block module1__block2 clip_right scroll-animation floating" onload="imgLoaded(this)">
+                        <div class="cliped">
+                            <img src="images/Game2.jpg">
+                        </div>
+                        <div class="module1__gradient"></div>
                     </div>
-                    <div class="block3 clip_left scroll-animation floating" onload="imgLoaded(this)">
-                        <img src="images/Game3.jpg">
-                        <div></div>
+                    <div class="module1__block module1__block3 clip_left scroll-animation floating" onload="imgLoaded(this)">
+                        <div class="cliped">
+                            <img src="images/Game3.jpg">
+                        </div>
+                        <div class="module1__gradient"></div>
                     </div>
-                    <div class="block4 clip_right scroll-animation floating" onload="imgLoaded(this)">
-                        <img src="images/Game4.jpg">
-                        <div></div>
+                    <div class="module1__block module1__block4 clip_right scroll-animation floating" onload="imgLoaded(this)">
+                        <div class="cliped">
+                            <img src="images/Game4.jpg">
+                        </div>
+                        <div class="module1__gradient"></div>
                     </div>
                 </div>
             </div>
@@ -100,12 +125,48 @@
             <!--Spacing--> <div style="height: 250px;"></div>
         <div><p>-</p></div>
             <div class="aboutme">
-                <h1>Title</h1>
-                <p>
-                    text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text 
-                </p>
+                <hr>
+                <table class="aboutme__section">
+                    <tr>
+                        <td>
+                            <h1>Title</h1>
+                        </td>
+                        <td>
+                            <a href="testpage.html"></a>
+                            <p>
+                                text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text 
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+                <hr>
+                <table class="aboutme__section">
+                    <tr>
+                        <td>
+                            <h1>Software Knowledge</h1>
+                        </td>
+                        <td>
+                            <p>
+                                text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text 
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+                <hr>
+                <table class="aboutme__section">
+                    <tr>
+                        <td>
+                            <h1>Education</h1>
+                        </td>
+                        <td>
+                            <p>
+                                High School Diploma – 09/2011 <br>
+                                Nanjing Forestry University - studying - Software Engineering 
+                            </p>
+                        </td>
+                    </tr>
+                </table>
             </div>
-            
             <div style="height: 5000px;"></div>
         </div>
 
