--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <img class="aboutme__hello__myphoto" src="images/MyPhoto.png" alt="">
                         </td>
                         <td>
-                            <p> Hi, my name is Mikhail <span class="aboutme__hello__cursor">_</span> </p>
+                            <p> Hi, I'm Mikhail <span class="aboutme__hello__cursor">_</span> </p>
                         </td>
                     </tr>
                 </table>
