--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             </ul>
 
             <h1>Pixel Art</h1>
+            <canvas id="catanim" class="hidden" width="256" height="256" catsize="4"></canvas>
             <hr>
             <ul class="image_list pixelated">
                 <li><div><div><img src="images/Game1.jpg" alt=""></div></div></li>
@@ -229,6 +230,7 @@
     <script src="scripts/Loading.js" type="text/javascript"></script>
     <script src="scripts/ScrollShow.js" type="text/javascript"></script>
     <script src="scripts/Navbar.js" type="text/javascript"></script>
+    <script src="scripts/CanvasAnim.js" type="text/javascript"></script>
     <script type="text/javascript">
         function imgLoaded(img){
             var $img = $(img);
