--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div id="home"><p>-</p></div>
 
-
+        <div style="height: 100px;"></div>
         <div class="header">
             <div class="container">
                 <h1>
@@ -85,8 +85,8 @@
         </div>  
 
         <div><p>-</p></div>
-            <!--Spacing--> <div style="height: 200px;"></div>
-        <div class="helloblock">
+            <!--Spacing--> <div style="height: 250px;"></div>
+        <div class="helloblock scroll-animation floating2">
             <table>
                 <tr>
                     <td>
@@ -99,13 +99,9 @@
             </table>
             </div>
         </div>
-<!--Spacing--> <div style="height: 200px;"></div>
+<!--Spacing--> <div style="height: 180px;"></div><!--80-->
+<!--        
         <div class="module1">
-            
-            <h3 class="scroll-animation rotate-text1">
-                <span>projects dev</span>e<span>loped by me</span>
-            </h3>
-
             <div class="module1__images">
                 <div class="module1__block module1__block1 clip_left scroll-animation floating" onload="imgLoaded(this)">
                     <div class="cliped">
@@ -133,35 +129,51 @@
                 </div>
             </div>
         </div>
+-->
 
 <!--Spacing--> <div style="height: 200px;"></div>
         <div id="portfolio">
             <h1>Projects</h1>
             <hr>
             <ul class="image_list">
-                <li><div><div><img src="images/Game1.jpg" alt=""></div></div></li>
-                <li><div><div><img src="images/Game2.jpg" alt=""></div></div></li>
-                <li><div><div><img src="images/Game3.jpg" alt=""></div></div></li>
-                <li><div><div><img src="images/Game4.jpg" alt=""></div></div></li>
+                <li><div><div>
+                    <img src="images/Dummy.jpg" alt="">
+                </div></div></li>
+                <li><div><div>
+                    <img src="images/Dummy.jpg" alt="">
+                </div></div></li>
+                <li><div><div>
+                    <img src="images/Dummy.jpg" alt="">
+                </div></div></li>
+                <li><div><div>
+                    <img src="images/Dummy.jpg" alt="">
+                </div></div></li>
             </ul>
 
             <h1>Visual Effects</h1>
             <hr>
-            <ul class="image_list">
-                <li><div><div><img src="images/Game1.jpg" alt=""></div></div></li>
-                <li><div><div><img src="images/Game2.jpg" alt=""></div></div></li>
-                <li><div><div><img src="images/Game3.jpg" alt=""></div></div></li>
-                <li><div><div><img src="images/Game4.jpg" alt=""></div></div></li>
+            <ul class="image_list" datasource="vfx">
+                
             </ul>
 
             <h1>Pixel Art</h1>
-            <canvas id="catanim" class="hidden" width="256" height="256" catsize="4"></canvas>
+            <div class="catanim_base" >
+                <img class="catanim pixelated" src="images/CatAnim.gif" alt="">
+            </div>
             <hr>
             <ul class="image_list pixelated">
-                <li><div><div><img src="images/Game1.jpg" alt=""></div></div></li>
-                <li><div><div><img src="images/Game2.jpg" alt=""></div></div></li>
-                <li><div><div><img src="images/Game3.jpg" alt=""></div></div></li>
-                <li><div><div><img src="images/Game4.jpg" alt=""></div></div></li>
+                <li><div><div>
+                    <img src="images/Dummy.jpg" alt="">
+                </div></div></li>
+                <li><div><div>
+                    <img src="images/Dummy.jpg" alt="">
+                </div></div></li>
+                <li><div><div>
+                    <img src="images/Dummy.jpg" alt="">
+                </div></div></li>
+                <li><div><div>
+                    <img src="images/Dummy.jpg" alt="">
+                </div></div></li>
             </ul>
         </div>
 
@@ -226,11 +238,13 @@
 
 
         <div style="height: 2000px;"></div>
+
     </body>
+    <script src="data/portfolio.js" type="text/javascript"></script>
+    <script src="scripts/ImageList.js" type="text/javascript"></script>
     <script src="scripts/Loading.js" type="text/javascript"></script>
     <script src="scripts/ScrollShow.js" type="text/javascript"></script>
     <script src="scripts/Navbar.js" type="text/javascript"></script>
-    <script src="scripts/CanvasAnim.js" type="text/javascript"></script>
     <script type="text/javascript">
         function imgLoaded(img){
             var $img = $(img);
