--- a/index.html
+++ b/index.html
@@ -161,19 +161,7 @@
                 <img class="catanim pixelated" src="images/CatAnim.gif" alt="">
             </div>
             <hr>
-            <ul class="image_list pixelated">
-                <li><div><div>
-                    <img src="images/Dummy.jpg" alt="">
-                </div></div></li>
-                <li><div><div>
-                    <img src="images/Dummy.jpg" alt="">
-                </div></div></li>
-                <li><div><div>
-                    <img src="images/Dummy.jpg" alt="">
-                </div></div></li>
-                <li><div><div>
-                    <img src="images/Dummy.jpg" alt="">
-                </div></div></li>
+            <ul class="image_list pixelated" datasource="pixelArt">
             </ul>
         </div>
 
