--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/navbar.css" type="text/css">
     <link rel="stylesheet" href="styles/helloblock.css" type="text/css">
     <link rel="stylesheet" href="styles/protfolio.css" type="text/css">
+    <link rel="stylesheet" href="styles/imagebrowser.css" type="text/css">
     <body>
 
         <div class="load-screen hidden">
@@ -100,36 +101,6 @@
             </div>
         </div>
 <!--Spacing--> <div style="height: 180px;"></div><!--80-->
-<!--        
-        <div class="module1">
-            <div class="module1__images">
-                <div class="module1__block module1__block1 clip_left scroll-animation floating" onload="imgLoaded(this)">
-                    <div class="cliped">
-                        <img src="images/Game1.jpg">
-                    </div>
-                    <div class="module1__gradient"></div>
-                </div>
-                <div class="module1__block module1__block2 clip_right scroll-animation floating" onload="imgLoaded(this)">
-                    <div class="cliped">
-                        <img src="images/Game2.jpg">
-                    </div>
-                    <div class="module1__gradient"></div>
-                </div>
-                <div class="module1__block module1__block3 clip_left scroll-animation floating" onload="imgLoaded(this)">
-                    <div class="cliped">
-                        <img src="images/Game3.jpg">
-                    </div>
-                    <div class="module1__gradient"></div>
-                </div>
-                <div class="module1__block module1__block4 clip_right scroll-animation floating" onload="imgLoaded(this)">
-                    <div class="cliped">
-                        <img src="images/Game4.jpg">
-                    </div>
-                    <div class="module1__gradient"></div>
-                </div>
-            </div>
-        </div>
--->
 
 <!--Spacing--> <div style="height: 200px;"></div>
         <div id="portfolio">
@@ -224,10 +195,14 @@
             contact
         </div>
 
+        <div id="image_browser">
+            <div class="close_button"></div>
+        </div>
 
         <div style="height: 2000px;"></div>
 
     </body>
+    <script src="scripts/ImageBrowser.js" type="text/javascript"></script>
     <script src="data/portfolio.js" type="text/javascript"></script>
     <script src="scripts/ImageList.js" type="text/javascript"></script>
     <script src="scripts/Loading.js" type="text/javascript"></script>
