--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
         </div>
 
         <div id="image_browser">
+            <img src="" alt="">
             <div class="close_button"></div>
         </div>
 
