--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
                     <td>
                         <p>
                             dcfa.m@yandex.ru <br>
+                            dcfa.m@outlook.com
                         </p>
                     </td>
                 </tr>
