--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 <li>Unity</li>
                                 <ul>
                                     <li>VFX Graph/Shader Graph</li>
-                                    <li>Particle System/Physics/Animator/Joints</li>
+                                    <li>Animator/Particle System/Physics/Joints/NavMesh</li>
                                     <li>Custom Editors/Custom Property Drawers</li>
                                     <li>In-App Purchasing</li>
                                     <li>Pro Builder</li>
@@ -307,7 +307,16 @@
                         </p>
                     </td>
                 </tr>
-
+                <tr>
+                    <td>
+                        <img src="images/IconSkypeGreen.png" alt="">
+                    </td>
+                    <td>
+                        <p>
+                            https://join.skype.com/invite/XDljrtzVtRzc <br>
+                        </p>
+                    </td>
+                </tr>
                 <!--<tr>
                     <td>
                         <img src="images/IconDiscordGreen.png" alt="">
