fix, add linkedin

--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
                             <li>
                                 “Azur Games” azurgames.com <br>
                                 December 2020 - May 2021<br>
-                                Unity Developer
+                                Unity Developer (sole proprietor)
                             </li>
                             <br>
                             <li>
                                 “Wanna Play” wannaplay.gg<br>
                                 June 2021 - January 2022<br>
-                                Unity Developer/ Producer
+                                Unity Developer/ Producer (sole proprietor)
                             </li>
                         </ul>
                     </td>
@@ -312,9 +312,15 @@
                         <img src="images/IconSkypeGreen.png" alt="">
                     </td>
                     <td>
-                        <p>
-                            https://join.skype.com/invite/XDljrtzVtRzc <br>
-                        </p>
+                        <a href="https://join.skype.com/invite/XDljrtzVtRzc"> https://join.skype.com/invite/XDljrtzVtRzc</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="images/IconLinkedinGreen.png" alt="">
+                    </td>
+                    <td>
+                        <a href="https://www.linkedin.com/incareer/in/mikhail-usov-bb5604220">https://www.linkedin.com/incareer/in/mikhail-usov-bb5604220</a>
                     </td>
                 </tr>
                 <!--<tr>
