--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
             <ul class="image_list" datasource="vfx">
             </ul>
 
+            <h1>Other Projects</h1>
+            <hr>
+            <ul class="image_list" datasource="otherProjects">
+            </ul>
+
             <h1>Pixel Art</h1>
             <div class="catanim_base" >
                 <img class="catanim pixelated" src="images/CatAnim.gif" alt="">
@@ -162,6 +167,7 @@
                                 <ul>
                                     <li>VFX Graph/Shader Graph</li>
                                     <li>Animator/Particle System/Physics/Joints/NavMesh</li>
+                                    <li>SoundSource/SoundMixer/setting up sound assets</li>
                                     <li>Custom Editors/Custom Property Drawers</li>
                                     <li>In-App Purchasing</li>
                                     <li>Pro Builder</li>
@@ -201,6 +207,8 @@
                                 HTML, CSS, JS</li>
                             <li><div class = "star on"></div><div class = "star off"></div><div class = "star off"></div> 
                                 Phyton</li>
+                            <li><div class = "star on"></div><div class = "star on"></div><div class = "star off"></div> 
+                                Lua</li>
                         </ul>
                             
                         <br>
@@ -344,6 +352,7 @@
 
         <div style="height: 300px;"></div>
 
+        <a href="https://github.com/DCFApixels" id="github_button"><img src="images/GitHubButton.png" alt=""></a>
     </body>
     <script src="scripts/Other.js" type="text/javascript"></script>
     <script src="scripts/ImageBrowser.js" type="text/javascript"></script>
