--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <link rel="stylesheet" href="styles/styles.css" type="text/css">
     <link rel="stylesheet" href="styles/resume.css" type="text/css">
     <link rel="stylesheet" href="styles/header.css" type="text/css">
@@ -74,7 +74,7 @@
             height: 3000px; width: 150%;
             filter:opacity(0.15);">
             <img src="images/Or3.png">
-        </div>
+            </div>
 
             <div class="background_decor" style="
                 bottom: -1300px; left: -10%;
@@ -263,31 +263,31 @@
                             <li>
                                 Nanjing Forestry University
                                 <br>
-                                Specialty: Software Engineering
+                                Bachelor, Software Engineering
                                 <br>
-                                China - studying
+                                China - 06/2023
                             </li>
                             <br>
                             <li>
                                 Jiangsu Vocational Institute of Commerce
                                 <br>
-                                Specialty: E-commerce
+                                E-commerce
                                 <br>
-                                China – 09/2021 
+                                China – 06/2021 
                             </li>
                             <br>
                             <li>
                                 Togliatti Engineering College - Diploma with honors
                                 <br>
-                                Specialty: Programming in computer systems
+                                Programming in computer systems
                                 <br>
-                                Russia – 09/2018
+                                Russia – 06/2018
                             </li>
                             <br>
                             <li>
                                 High School Diploma
                                 <br>
-                                Russia – 09/2014 
+                                Russia – 06/2014 
                             </li>
                         </ul>
                     </td>
