--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                                     <li>VFX Graph/Shader Graph</li>
                                     <li>Animator/Particle System/Physics/Joints/NavMesh</li>
                                     <li>SoundSource/SoundMixer/setting up sound assets</li>
+                                    <li>DOTween</li>
                                     <li>Custom Editors/Custom Property Drawers</li>
                                     <li>In-App Purchasing</li>
                                     <li>Pro Builder</li>
