--- a/index.html
+++ b/index.html
@@ -220,10 +220,14 @@
                         </ul>
 
                         <br>
+                        Languages:
+                        <ul>
+                            <li>Russian: Native</li>
+                            <li>Chinese: HSK4 (258/300 points)</li>
+                        </ul>
                         Other:
                         <ul>
                             <li>Principles of game design, level design</li>
-                            <li>Chinese (HSK4 2019 - 258 points)</li>
                         </ul>
                     </td>
                 </tr>
