--- a/index.html
+++ b/index.html
@@ -223,8 +223,10 @@
                         Languages:
                         <ul>
                             <li>Russian: Native</li>
-                            <li>Chinese: HSK4 (258/300 points)</li>
+                            <li>Chinese: HSK4 (258 points)</li>
                         </ul>
+                        
+                        <br>
                         Other:
                         <ul>
                             <li>Principles of game design, level design</li>
